# code-ffcd-cms-prediction

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
cms_prediction/: training_utils.py
cms_prediction/cli/: cms_classification_crossval.py  cms_classification_external_val.py
cms_prediction/data/: create_dummy_dataset.py  dataset.py
cms_prediction/models/: abmil.py  chowder.py  meanpool.py
cms_prediction/models/utils/: attention.py  extreme_layer.py  mlp.py  tile_layers.py
scripts/: evaluate_cms_classifier.sh  train_cms_classifier.sh
